--- a/css/skel.css
+++ b/css/skel.css
@@ -17,7 +17,7 @@
 		margin-right: auto;
 
 		/* width: (containers) */
-		width: 51em;
+		width: 45em;
 	}
 
 	/* Modifiers */
@@ -27,17 +27,17 @@
 				width: 100%;
 
 				/* max-width: (containers * 1.25) */
-				max-width: 63.75em;
+				max-width: 56.25em;
 
 				/* min-width: (containers) */
-				min-width: 51em;
+				min-width: 45em;
 			}
 
 		/* 75% */
 			.container.\37 5\25 {
 
 				/* width: (containers * 0.75) */
-				width: 38.25em;
+				width: 33.75em;
 
 			}
 
@@ -45,7 +45,7 @@
 			.container.\35 0\25 {
 
 				/* width: (containers * 0.50) */
-				width: 25.5em;
+				width: 22.5em;
 
 			}
 
@@ -53,7 +53,7 @@
 			.container.\32 5\25 {
 
 				/* width: (containers * 0.25) */
-				width: 12.75em;
+				width: 11.25em;
 
 			}
 
@@ -88,110 +88,110 @@
 
 			.row > * {
 				/* padding: (gutters.horizontal) 0 0 (gutters.vertical) */
-				padding: 30px 0 0 30px;
+				padding: 0 0 0 2em;
 			}
 
 			.row {
 				/* margin: -(gutters.horizontal) 0 -1px -(gutters.vertical) */
-				margin: -30px 0 -1px -30px;
+				margin: 0 0 -1px -2em;
 			}
 
 			.row.uniform > * {
 				/* padding: (gutters.vertical) 0 0 (gutters.vertical) */
-				padding: 30px 0 0 30px;
+				padding: 2em 0 0 2em;
 			}
 
 			.row.uniform {
 				/* margin: -(gutters.vertical) 0 -1px -(gutters.vertical) */
-				margin: -30px 0 -1px -30px;
+				margin: -2em 0 -1px -2em;
 			}
 
 		/* 200% */
 
 			.row.\32 00\25 > * {
 				/* padding: (gutters.horizontal) 0 0 (gutters.vertical) */
-				padding: 60px 0 0 60px;
+				padding: 0 0 0 4em;
 			}
 
 			.row.\32 00\25 {
 				/* margin: -(gutters.horizontal) 0 -1px -(gutters.vertical) */
-				margin: -60px 0 -1px -60px;
+				margin: 0 0 -1px -4em;
 			}
 
 			.row.uniform.\32 00\25 > * {
 				/* padding: (gutters.vertical) 0 0 (gutters.vertical) */
-				padding: 60px 0 0 60px;
+				padding: 4em 0 0 4em;
 			}
 
 			.row.uniform.\32 00\25 {
 				/* margin: -(gutters.vertical) 0 -1px -(gutters.vertical) */
-				margin: -60px 0 -1px -60px;
+				margin: -4em 0 -1px -4em;
 			}
 
 		/* 150% */
 
 			.row.\31 50\25 > * {
 				/* padding: (gutters.horizontal) 0 0 (gutters.vertical) */
-				padding: 45px 0 0 45px;
+				padding: 0 0 0 1.5em;
 			}
 
 			.row.\31 50\25 {
 				/* margin: -(gutters.horizontal) 0 -1px -(gutters.vertical) */
-				margin: -45px 0 -1px -45px;
+				margin: 0 0 -1px -1.5em;
 			}
 
 			.row.uniform.\31 50\25 > * {
 				/* padding: (gutters.vertical) 0 0 (gutters.vertical) */
-				padding: 45px 0 0 45px;
+				padding: 1.5em 0 0 1.5em;
 			}
 
 			.row.uniform.\31 50\25 {
 				/* margin: -(gutters.vertical) 0 -1px -(gutters.vertical) */
-				margin: -45px 0 -1px -45px;
+				margin: -1.5em 0 -1px -1.5em;
 			}
 
 		/* 50% */
 
 			.row.\35 0\25 > * {
 				/* padding: (gutters.horizontal) 0 0 (gutters.vertical) */
-				padding: 15px 0 0 15px;
+				padding: 0 0 0 1em;
 			}
 
 			.row.\35 0\25 {
 				/* margin: -(gutters.horizontal) 0 -1px -(gutters.vertical) */
-				margin: -15px 0 -1px -15px;
+				margin: 0 0 -1px -1em;
 			}
 
 			.row.uniform.\35 0\25 > * {
 				/* padding: (gutters.vertical) 0 0 (gutters.vertical) */
-				padding: 15px 0 0 15px;
+				padding: 1em 0 0 1em;
 			}
 
 			.row.uniform.\35 0\25 {
 				/* margin: -(gutters.vertical) 0 -1px -(gutters.vertical) */
-				margin: -15px 0 -1px -15px;
+				margin: -1em 0 -1px -1em;
 			}
 
 		/* 25% */
 
 			.row.\32 5\25 > * {
 				/* padding: (gutters.horizontal) 0 0 (gutters.vertical) */
-				padding: 7.5px 0 0 7.5px;
+				padding: 0 0 0 0.5em;
 			}
 
 			.row.\32 5\25 {
 				/* margin: -(gutters.horizontal) 0 -1px -(gutters.vertical) */
-				margin: -7.5px 0 -1px -7.5px;
+				margin: 0 0 -1px -0.5em;
 			}
 
 			.row.uniform.\32 5\25 > * {
 				/* padding: (gutters.vertical) 0 0 (gutters.vertical) */
-				padding: 7.5px 0 0 7.5px;
+				padding: 0.5em 0 0 0.5em;
 			}
 
 			.row.uniform.\32 5\25 {
 				/* margin: -(gutters.vertical) 0 -1px -(gutters.vertical) */
-				margin: -7.5px 0 -1px -7.5px;
+				margin: -0.5em 0 -1px -0.5em;
 			}
 
 		/* 0% */
