--- a/css/style-large.css
+++ b/css/style-large.css
@@ -1,5 +1,5 @@
 /*
-	Directive by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -7,5 +7,17 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 12pt;
+		font-size: 11pt;
+	}
+
+/* Header */
+
+	#header {
+		width: 20em;
+	}
+
+/* Wrapper */
+
+	#wrapper {
+		padding-right: 20em;
 	}
