--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -95,7 +95,7 @@
 			}
 
 			#titleBar .toggle:before {
-				background: ##0066cc;
+				background: #06B0D4;
 				color: #ffffff;
 				content: '\f0c9';
 				display: block;
@@ -110,6 +110,6 @@
 			}
 
 	#sidePanel {
-		background: #0066cc;
+		background: #06B0D4;
 		color: #b3d1ff;
 	}
