--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #66b3ff;
+					background: #06B0D4;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
