--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,7 @@
 		ul.feature-icons {
 			list-style: none;
 			padding-left: 0;
+			background: #06B0D4;
 		}
 
 			ul.feature-icons li {
@@ -541,6 +542,7 @@
 				margin: 0 0 1.6875em 0;
 				padding: 0.35em 0 0 3.5em;
 				position: relative;
+				background: #06B0D4;
 				width: 48%;
 			}
 
