--- a/css/style-large.css
+++ b/css/style-large.css
@@ -9,7 +9,11 @@
 	body, input, select, textarea {
 		font-size: 11pt;
 	}
+	#mount {
+		 padding: 0em 0em 0em 35em;
+	 /*	display: block; */
 
+	}
 /* Header */
 
 	#header {
