--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -1,61 +1,26 @@
 /*
-	Read Only by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Header */
 
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
+	#header nav a {
 		position: relative;
+		border: solid 1px white;
+		border-radius: 100%;
 		-ms-behavior: url("css/ie/PIE.htc");
 	}
 
-/* Form */
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		line-height: 2.75em;
-	}
-
-	input[type="checkbox"],
-	input[type="radio"] {
-		-moz-appearance: normal;
-		-webkit-appearance: normal;
-		-o-appearance: normal;
-		-ms-appearance: normal;
-		appearance: normal;
-	}
-
-		input[type="checkbox"] + label,
-		input[type="radio"] + label {
-			padding: 0 0 0 1.5em;
+		#header nav a:before {
+			border: 0;
 		}
 
-			input[type="checkbox"] + label:before,
-			input[type="radio"] + label:before {
-				display: none;
-			}
+/* Footer */
 
-/* Button */
-
-	input[type="submit"].alt,
-	input[type="reset"].alt,
-	input[type="button"].alt,
-	.button.alt {
-		border: solid 2px #e4e4e4;
+	#footer {
+		background-image: url("images/footer.png");
+		background-position: bottom left;
+		background-repeat: repeat-x;
 	}
