--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@
 		left: 0;
 		position: fixed;
 		text-align: center;
-		top: 0;
+		top: 30;
 		width: 100%;
 	}
 
@@ -184,7 +184,7 @@
    .related > a {
 	border: 1px solid #fff;
 	display: inline-block;
-	text-align: center;
+	text-align: left;
 	margin: 20px 10px;
 	padding: 25px;
 	color: #fff;
@@ -444,7 +444,7 @@
 		background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
 		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
-		bottom: 0;
+		bottom: 10;
 		cursor: default;
 		height: 6em;
 		left: 0;
