--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,13 @@
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
 	}
+    html {
+      background-color: #0096c7;
+    }
 
 	body {
-		background: white;
-		overflow: hidden;
+		background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+
 	}
 
 		body.loading * {
