--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 		font-weight: 300 !important;
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
+		margin: 0;
 	}
     html {
       background-color: #0096c7;
