--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,13 @@
 		font-weight: 300 !important;
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
-		margin: 0;
+		width: 100%;
+		height: 100%;
 	}
     html {
       background-color: #0096c7;
+	  margin: env(safe-area-inset);
+	  padding: env(safe-area-inset);
     }
 
 	body {
@@ -90,6 +93,8 @@
 		width: 100%;
 		display: flex;
   		flex-direction: column; 
+		margin: env(safe-area-inset);
+        object-fit: cover;
 	}
 
 /* BG */
@@ -118,6 +123,8 @@
 		opacity: 1;
 		position: fixed;
 		top: 0;
+		margin: env(safe-area-inset);
+		object-fit: cover;
 	}
 	@-moz-keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-2250px,0,0); -webkit-transform: translate3d(-2250px,0,0); -o-transform: translate3d(-2250px,0,0); -ms-transform: translate3d(-2250px,0,0); transform: translate3d(-2250px,0,0); } }
 	@-webkit-keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-2250px,0,0); -webkit-transform: translate3d(-2250px,0,0); -o-transform: translate3d(-2250px,0,0); -ms-transform: translate3d(-2250px,0,0); transform: translate3d(-2250px,0,0); } }
