--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
 @import url("all.min.css");
 
-/* Basic */
+/* Basic solution for NOTCH: https://gist.github.com/valnub/aebdb788895f8c581d9971b6aed994af */
 
 	body, input, select, textarea {
 		color: white;
@@ -17,13 +17,9 @@
 		line-height: 1.75em;
 		width: 100%;
 		height: 100%;
-		touch-action: none;
-		overflow: hidden;
 	}
     html {
       background-color: #0096c7;
-	  margin: env(safe-area-inset);
-	  padding: env(safe-area-inset);
     }
 
 	body {
@@ -94,8 +90,10 @@
 		top: 0;
 		width: 100%;
 		display: flex;
-  		flex-direction: column; 
-		padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  		flex-direction: column;
+		padding-left: env(safe-area-inset-left);
+		padding-right: env(safe-area-inset-right);
+		padding-bottom: env(safe-area-inset-bottom); 
 
 	}
 
@@ -125,7 +123,8 @@
 		opacity: 1;
 		position: fixed;
 		top: 0;
-		padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+	/*	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+		min-height: calc(100% + env(safe-area-inset-top)); */
 
 	}
 	@-moz-keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-2250px,0,0); -webkit-transform: translate3d(-2250px,0,0); -o-transform: translate3d(-2250px,0,0); -ms-transform: translate3d(-2250px,0,0); transform: translate3d(-2250px,0,0); } }
