--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
 		width: 100%;
-		height: 100%;
+		height: calc(100% + 193px);
 	}
     html {
       background-color: #0096c7;
@@ -93,8 +93,8 @@
   		flex-direction: column;
 		padding-top: env(safe-area-inset-top); 
 		padding-left: env(safe-area-inset-left);
-		padding-right: env(safe-area-inset-right);
-		padding-bottom: env(safe-area-inset-bottom); 
+	/* 	padding-right: env(safe-area-inset-right);
+		padding-bottom: env(safe-area-inset-bottom);  */
 
 	}
 
