--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@
 		top: 0;
 		bottom: 0;
 		width: 100%;
-		overflow-y: auto:
+		overflow-y: auto;
 		/* scroll-behavior: smooth; */
 		overscroll-behavior-y: auto;
 	}
