--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@
 		width: 100%;
 		overflow-y: auto;
 		/* scroll-behavior: smooth; */
-		overscroll-behavior-y: auto;
+		overscroll-behavior-y: contain;
 	}
 
 		#main:before {
