--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,10 @@
 		width: 100%;
 		display: flex;
   		flex-direction: column;
-		padding-top: env(safe-area-inset-top); 
-		padding-left: env(safe-area-inset-left);
+		margin-top: env(safe-area-inset-top);
+		margin-left: env(safe-area-inset-left);
+		margin-bottom: env(safe-area-inset-bottom);
+        margin-right: env(safe-area-inset-right);
 	/* 	padding-right: env(safe-area-inset-right);
 		padding-bottom: env(safe-area-inset-bottom);  */
 
