--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@
 		background: #348cb2 url("images/bg.jpg") bottom left;
 		background-repeat: repeat-x;
 		left: 0;
+		height: 100%;
 		opacity: 1;
 		position: fixed;
 		top: 0;
@@ -139,6 +140,8 @@
 	#bg {
 		background-size: 2050px auto;
 		width: 6750px;
+		box-sizing: content-box;
+		width: 100%;
 	}
 
 /* Overlay */
