--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@
 		background: #348cb2 url("images/bg.jpg") bottom left;
 		background-repeat: repeat-x;
 		left: 0;
-		height: 100%;
+		height: 100vh;
 		opacity: 1;
 		position: fixed;
 		top: 0;
@@ -140,8 +140,6 @@
 	#bg {
 		background-size: 2050px auto;
 		width: 6750px;
-		box-sizing: content-box;
-		width: 100%;
 	}
 
 /* Overlay */
